<?xml version="1.0"?>
<package format="3">
  <name>map_layer</name>
  <version>0.0.1</version>
  <description>Pure-Python GMapping map layer for TurtleBot3 simulation (ROS 2 Jazzy).</description>
  <maintainer email="maintainer@example.com">TurtleBot3 GMapping</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
