<?xml version="1.0"?>
<package format="3">
  <name>preprocessing_layer</name>
  <version>0.1.0</version>
  <description>Preprocessing pipeline converting depth images into filtered point clouds and LaserScan outputs.</description>
  <maintainer email="maintainer@example.com">Preprocessing Layer Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
