<?xml version="1.0"?>
<package format="3">
  <name>sensor_layer</name>
  <version>0.1.0</version>
  <description>Sensor aggregation and republishing layer for the TurtleBot3 Gazebo simulation.</description>
  <maintainer email="maintainer@example.com">Sensor Layer Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
